--- a/css/main.css
+++ b/css/main.css
@@ -317,7 +317,7 @@ nav a {
     color: #c1dac4; }
 
 .home-hero {
-  background: url("../img/lapas.jpg") no-repeat bottom center/cover;
+  background: url("../../img/lapas.jpg");
   background-size: cover;
   background-position: center;
   padding: 10em 0;
