--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,6 @@
 @charset "UTF-8";
 @import 'https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700;900&display=swap';
-/* =============================================================== */
-/*  10. IMG / sumazina visas nuotraukas, ir telpa mob. tel.ekrane  */
-/* =============================================================== */
-/* =============================================================== */
-/*    12.   CONTAINER,  bet tik del MOBILE nustatymu               */
-/* =============================================================== */
-/* ================================================================== */
-/*    40.                  /  CLEARFIX  /                             */
-/* ================================================================== */
 /* IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII */
-/* =============================================================== */
-/*    43. /  COLUMN SYSTEM  / Naudosime atributa []                */
-/*         visos klases, kurios bus, gaus si aprasyma              */
-/*           su LEFT surykiuosime i viena eilute                   */
-/* =============================================================== */
-/* =============================================================== */
-/*    44.  /  COL - 3  / Paskirsime tekstui 50 procentu  GRID      */
-/* =============================================================== */
-/* =============================================================== */
-/*    46.  /  COL - 3  /  Paskirsime tekstui 50 procentu           */
-/*    kadangi bus CUDO klase, tai po [] rasysime vienguba dvitaski */
-/* =============================================================== */
 /* =============================================================== */
 /*    47.  /  COL - 3  /  Paskirsime tekstui 50 procentu           */
 /* =============================================================== */
@@ -34,34 +13,13 @@
 /* =============================================================== */
 /* IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII */
 /* =============================================================== */
-/*    22.         /  Typograthy /    H 1   ( telefonui )           */
-/* =============================================================== */
-/* =============================================================== */
-/*    27.     /  P  /   ir  /  P : LAST - OF - TYPE  /             */
-/* =============================================================== */
-/* =============================================================== */
 /*    28.     Margin'a, teksto apacioje, panaikina                 */
-/* =============================================================== */
-/* =============================================================== */
-/*    11.  Typograthy / sekcija : antros dalies pavadinimo dalis   */
-/* =============================================================== */
-/* =============================================================== */
-/*    13.            Typograthy / SPAN sekcija                     */
-/* =============================================================== */
-/* =============================================================== */
-/*    41.            Typograthy / SPAN sekcija                     */
 /* =============================================================== */
 /* =============================================================== */
 /*    42.               /  FOOTER  /                               */
 /* =============================================================== */
 /* =============================================================== */
-/*     17.    @ MEDIA QUERIES   /  kazkur ( 888 px  )              */
-/* =============================================================== */
-/* =============================================================== */
 /*    29.               /   P   /    60 REM                        */
-/* =============================================================== */
-/* =============================================================== */
-/*    14.    BUTTON  /  Virsutineje dalyje, po NAV menu linku      */
 /* =============================================================== */
 /* =============================================================== */
 /*    20.    @ MEDIA QUERIES                        */
@@ -82,21 +40,6 @@
 /*    32.    BUTTON  -  DARK : HOVER / FOCUS  / Zalioji dalis      */
 /* =============================================================== */
 /* =============================================================== */
-/*    ?.                 /   PARALLAX  /                           */
-/* =============================================================== */
-/* =============================================================== */
-/*    4.                     HEADER                                */
-/* =============================================================== */
-/* =============================================================== */
-/*     5.                    NAV UL                                */
-/* =============================================================== */
-/* =============================================================== */
-/*       6.                   NAV LI                               */
-/* =============================================================== */
-/* =============================================================== */
-/*       7.                   NAV  A  ( linkai  )                  */
-/* =============================================================== */
-/* =============================================================== */
 /*  9.            NAV A : HOVER ir  NAV A : FOCUS                  */
 /* =============================================================== */
 /* =============================================================== */
@@ -110,10 +53,6 @@
 /* =============================================================== */
 /*    19.    @ MEDIA QUERIES                        */
 /* =============================================================== */
-/* IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII */
-/* =============================================================== */
-/*    23.  HERO - HOME  /  ( mobiliam ) langelis teksto su remeliu */
-/* =============================================================== */
 /* =============================================================== */
 /*    24.  HERO - HOME  H 1   /  ( mobiliam )                      */
 /* =============================================================== */
@@ -121,19 +60,10 @@
 /*    25.    H 1   /  ( mobiliam )     /  25 REM  /   960 px ?     */
 /* =============================================================== */
 /* =============================================================== */
-/*    26.  HOME - ABOUT - TEXTBOX  H 1   /  ( mobiliam )  960 px ? */
-/* =============================================================== */
-/* =============================================================== */
-/*    25.    H 1   /  ( mobiliam ) /   60 REM  / apie 1000 px      */
-/* =============================================================== */
-/* =============================================================== */
 /*    28.    H 1   /  ( mobiliam ) /   60 REM  / apie 1000 px      */
 /* =============================================================== */
 /* =============================================================== */
 /*    27.  HERO - HOME  /  ( mobiliam ) langelis teksto su remeliu */
-/* =============================================================== */
-/* =============================================================== */
-/*    26.  HOME - ABOUT - TEXTBOX  H 1   /  ( mobiliam )           */
 /* =============================================================== */
 /* IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII */
 /* ================================================================== */
@@ -164,14 +94,6 @@
 /*    38.               /  PORTFOLIO  /                               */
 /* ================================================================== */
 /* IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII */
-/* ================================================================== */
-/*    39.      /  CTA  /   Zalioji dalis                              */
-/* ================================================================== */
-/* IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII */
-/* ================================================================== */
-/*    40.                 /  FOOTER  /                                */
-/* ================================================================== */
-/* IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII */
 * {
   box-sizing: border-box;
   transition: all ease-in-out 250ms; }
@@ -181,15 +103,24 @@ body {
   font-family: 'Raleway', sans-serif;
   text-align: center; }
 
+/* =============================================================== */
+/*  10. IMG / sumazina visas nuotraukas, ir telpa mob. tel.ekrane  */
+/* =============================================================== */
 img {
   max-width: 100%;
   height: auto; }
 
+/* =============================================================== */
+/*    12.   CONTAINER,  bet tik del MOBILE nustatymu               */
+/* =============================================================== */
 .container {
   width: 95%;
   max-width: 70em;
   margin: 0 auto; }
 
+/* ================================================================== */
+/*    40.                  /  CLEARFIX  /                             */
+/* ================================================================== */
 .clearfix::after {
   content: '';
   display: block;
@@ -200,6 +131,9 @@ section::after {
   display: block;
   clear: both; }
 
+/* ================================================================== */
+/*    40.                 /  FOOTER  /                                */
+/* ================================================================== */
 footer {
   background: #232323;
   color: #fff;
@@ -210,6 +144,12 @@ footer {
     display: block;
     clear: both; }
 
+/* IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII */
+/* =============================================================== */
+/*    43. /  COLUMN SYSTEM  / Naudosime atributa []                */
+/*         visos klases, kurios bus, gaus si aprasyma              */
+/*           su LEFT surykiuosime i viena eilute                   */
+/* =============================================================== */
 [class^='col-'] {
   width: 100%;
   margin-top: 1em; }
@@ -220,22 +160,34 @@ footer {
   width: 33.333334%;
   float: left; }
 
+/* =============================================================== */
+/*    22.         /  Typograthy /    H 1   ( telefonui )           */
+/* =============================================================== */
 h1 {
   font-weight: 300;
   font-size: 1.8rem;
   margin-top: 0; }
 
+/* =============================================================== */
+/*    27.     /  P  /   ir  /  P : LAST - OF - TYPE  /             */
+/* =============================================================== */
 p {
   margin-top: 0;
   line-height: 1.5; }
   p:last-of-type {
     margin-bottom: 0; }
 
+/* =============================================================== */
+/*    11.  Typograthy / sekcija : antros dalies pavadinimo dalis   */
+/* =============================================================== */
 .title {
   font-size: 2.5rem;
   margin-bottom: 1.5em;
   font-weight: 900;
-  margin-top: 1em; }
+  margin-top: 1em;
+  /* =============================================================== */
+  /*    13.            Typograthy / SPAN sekcija                     */
+  /* =============================================================== */ }
   .title span {
     font-weight: 300;
     display: block;
@@ -249,6 +201,9 @@ p {
   padding: 0;
   list-style-type: none; }
 
+/* =============================================================== */
+/*    14.    BUTTON  /  Virsutineje dalyje, po NAV menu linku      */
+/* =============================================================== */
 .button {
   display: inline-block;
   font-size: 1.15rem;
@@ -275,7 +230,10 @@ p {
 
 .button-dark {
   color: #232323;
-  border-color: #232323; }
+  border-color: #232323;
+  /* =============================================================== */
+  /*    ?.                 /   PARALLAX  /                           */
+  /* =============================================================== */ }
   .button-dark:hover {
     background: #232323;
     color: #00ff6c; }
@@ -289,36 +247,54 @@ p {
 .parallax--box {
   transition: initial; }
 
+/* =============================================================== */
+/*    4.                     HEADER                                */
+/* =============================================================== */
 header {
   position: absolute;
   margin: 1em;
   left: 0;
   right: 0; }
 
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none; }
+/* =============================================================== */
+/*     .                       NAV                                 */
+/* =============================================================== */
+nav {
+  /* =============================================================== */
+  /*     5.                    NAV UL                                */
+  /* =============================================================== */
+  /* =============================================================== */
+  /*       6.                   NAV LI                               */
+  /* =============================================================== */
+  /* =============================================================== */
+  /*       7.                   NAV  A  ( linkai  )                  */
+  /* =============================================================== */ }
+  nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+  nav li {
+    display: inline-block;
+    margin: 1em; }
+  nav a {
+    font-weight: 900;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    padding: 0.5em;
+    background: #016e2d;
+    color: #fff; }
+    nav a:hover {
+      color: #c1dac4; }
+    nav a:focus {
+      color: #c1dac4; }
 
-nav li {
-  display: inline-block;
-  margin: 1em; }
-
-nav a {
-  font-weight: 900;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 0.8rem;
-  padding: 0.5em;
-  background: #016e2d;
-  color: #fff; }
-  nav a:hover {
-    color: #c1dac4; }
-  nav a:focus {
-    color: #c1dac4; }
-
+/* IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII */
+/* =============================================================== */
+/*    23.  HERO - HOME  /  ( mobiliam ) langelis teksto su remeliu */
+/* =============================================================== */
 .home-hero {
-  background: url("../../img/lapas.jpg");
+  background: url("img/lapas.jpg");
   background-size: cover;
   background-position: center;
   padding: 10em 0;
@@ -363,6 +339,10 @@ nav a {
   .port-desc p {
     margin: 1em; }
 
+/* IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII */
+/* ================================================================== */
+/*    39.      /  CTA  /   Zalioji dalis                              */
+/* ================================================================== */
 .cta {
   background-color: #00ff6c;
   padding: 5em 0; }
@@ -376,11 +356,21 @@ nav a {
       padding-left: 0; }
     [class^='col-']:last-child {
       padding-right: 0; }
+  /* =============================================================== */
+  /*    44.  /  COL - 3  / Paskirsime tekstui 50 procentu  GRID      */
+  /* =============================================================== */
+  /* =============================================================== */
+  /*    46.  /  COL - 3  /  Paskirsime tekstui 50 procentu           */
+  /*    kadangi bus CUDO klase, tai po [] rasysime vienguba dvitaski */
+  /* =============================================================== */
   .col-3 {
     width: 50%; }
   .col-1 {
     width: 16.6666%; } }
 
+/* =============================================================== */
+/*     17.    @ MEDIA QUERIES   /  kazkur ( 888 px  )              */
+/* =============================================================== */
 @media (min-width: 60rem) {
   p {
     font-size: 1.2rem;
@@ -396,8 +386,14 @@ nav a {
   .home-hero {
     height: 100vh;
     padding-top: 35vh; }
+  /* =============================================================== */
+  /*    25.    H 1   /  ( mobiliam ) /   60 REM  / apie 1000 px      */
+  /* =============================================================== */
   h1 {
     font-size: 2.5rem; }
+  /* =============================================================== */
+  /*    26.  HOME - ABOUT - TEXTBOX  H 1   /  ( mobiliam )  960 px ? */
+  /* =============================================================== */
   .home-about {
     background: url("../img/juokas.jpg");
     padding: 1em;
@@ -409,7 +405,10 @@ nav a {
     padding: 7em;
     top: -5em;
     text-align: left;
-    box-shadow: 0 0 4em 0 rgba(0, 0, 0, 0.3); }
+    box-shadow: 0 0 4em 0 rgba(0, 0, 0, 0.3);
+    /* =============================================================== */
+    /*    26.  HOME - ABOUT - TEXTBOX  H 1   /  ( mobiliam )           */
+    /* =============================================================== */ }
     .home-about-textbox h1 {
       top: 0.3rem;
       left: 3em;
