--- a/css/main.css
+++ b/css/main.css
@@ -484,7 +484,9 @@ nav a:focus {
   /* ================================================================= */
   .port-item {
     /* kad visos nuotraukos butu vienodu proporciju */
-    width: 33.3333334%;
+
+    /* width: 33.3333334%; */
+
     /* nuotraukas matysime "pilnas" */
     overflow: hidden;
   }
