--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,8 @@ p {
   text-transform: uppercase;
   border-width: 2px;
   border-style: solid;
-  padding: 0.5em 1.75em; }
+  padding: 0.5em 1.75em;
+  font-weight: 700; }
 
 /* =============================================================== */
 /*    30.  /   P   /    60 REM  /  mažesni mygtukai / sekcija 4:   */
@@ -201,9 +202,6 @@ header {
 /*     .                       NAV                                 */
 /* =============================================================== */
 nav {
-  /* =============================================================== */
-  /*     5.                    NAV UL                                */
-  /* =============================================================== */
   /* =============================================================== */
   /*       6.                   NAV LI                               */
   /* =============================================================== */
